# ExpoLens

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.system
app/: config.py  main.py
app/api/v1/: rest.py  ws.py
app/core/: security.py
app/data/: filler_words.json
app/llm/: engine.py  prompts.py
app/models/: feedback.py  metrics.py  session.py  streaming.py
app/pipelines/: aggregator.py  audio.py  video.py
app/services/: reporter.py  session.py
scripts/: download_models.sh  entrypoint.sh
tests/: test_aggregator.py  test_audio_pipeline.py  test_metrics.py  test_report.py  test_video_pipeline.py  test_websocket.py
